Add first html module

--- a/index.html
+++ b/index.html
@@ -6,6 +6,43 @@
     <title>Landing Page</title>
 </head>
 <body>
-    
+    <div class="header">
+        <div class="headertop">
+            <img src="" alt="">logo here
+            <ul>
+                <li><a href="">header link one</a></li>
+                <li><a href="">header link two</a></li>
+                <li><a href="">header link three</a></li>
+            </ul>
+        </div>
+        <div>
+            <div class="header-container">
+                <div>
+                    <h2>This website is awesome</h2>
+                </div>
+                <div>
+                    <p>This website has some subtext that goes here under the main title. It`s a smaller font and the color is lower contrast</p>
+                </div>
+                <div>
+                    <button class="header sign-up">Sign Up</button>
+                </div>
+            </div>
+            <div class="header-container">
+                <img src="" alt="">Image big
+            </div>
+        </div>
+    </div>
+    <div class="info image">
+
+    </div>
+    <div class="info quote">
+
+    </div>
+    <div class="info reclut">
+
+    </div>
+    <div class="footer">
+
+    </div>
 </body>
 </html>
