--- a/index.html
+++ b/index.html
@@ -32,8 +32,18 @@
             </div>
         </div>
     </div>
-    <div class="info image">
-
+    <div class="info images">
+        <div><h3>Some random information</h3></div>
+        <div>
+            <img src="" alt="">image1
+            <p>This is some subtext under an illustration or image</p>
+            <img src="" alt="">image1
+            <p>This is some subtext under an illustration or image</p>
+            <img src="" alt="">image1
+            <p>This is some subtext under an illustration or image</p>
+            <img src="" alt="">image1
+            <p>This is some subtext under an illustration or image</p>
+        </div>
     </div>
     <div class="info quote">
 
