--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="header">
@@ -46,10 +47,22 @@
         </div>
     </div>
     <div class="info quote">
+        <div>
+            <p>This is an inspiring quote, or a testimonial from a customer. Maybe it`s just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice</p>
+        </div>
+        <div><p>-Thor, god of Thunder</p></div>
 
     </div>
     <div class="info reclut">
-
+        <div>
+            <div>
+                <h4>Call of action! It`s time!</h4>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <div>
+                <button class="sign-up">Sign up</button>
+            </div>
+        </div>
     </div>
     <div class="footer">
 
