Change signup class name

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <p>This website has some subtext that goes here under the main title. It`s a smaller font and the color is lower contrast</p>
                 </div>
                 <div>
-                    <button class="header sign-up">Sign Up</button>
+                    <button class="sign-up">Sign Up</button>
                 </div>
             </div>
             <div class="header-container">
