--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="header">
         <div class="headertop">
-            <img src="" alt="">logo here
+            <img id="logo" src="/home/brandonzs/repos/landing-page/images/ohmybonnie.jpg" alt="oh my bonnie logo">
             <ul>
                 <li><a href="">header link one</a></li>
                 <li><a href="">header link two</a></li>
@@ -29,20 +29,20 @@
                 </div>
             </div>
             <div class="header-container">
-                <img src="" alt="">Image big
+                <img src="/home/brandonzs/repos/landing-page/images/katie-bernotsky-zV3eqGQYVpc-unsplash.jpg" alt="">
             </div>
         </div>
     </div>
     <div class="info images">
         <div><h3>Some random information</h3></div>
         <div>
-            <img src="" alt="">image1
+            <img src="/home/brandonzs/repos/landing-page/images/luc-huyghebaert-ceGfN7p2mNU-unsplash.jpg" alt="">
             <p>This is some subtext under an illustration or image</p>
-            <img src="" alt="">image1
+            <img src="/home/brandonzs/repos/landing-page/images/kojirou-sasaki-DLdDrb2d4F4-unsplash.jpg" alt="">image1
             <p>This is some subtext under an illustration or image</p>
-            <img src="" alt="">image1
+            <img src="images/khalid-elkady-VA1JRsFJd70-unsplash.jpg" alt="">image1
             <p>This is some subtext under an illustration or image</p>
-            <img src="" alt="">image1
+            <img src="images/james-watson-2joVhR1OWSc-unsplash.jpg" alt="">image1
             <p>This is some subtext under an illustration or image</p>
         </div>
     </div>
