--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
                 <li><a href="">header link three</a></li>
             </ul>
         </div>
-        <div>
+        <div class="container">
             <div class="header-container">
                 <div>
                     <h2>This website is awesome</h2>
                 </div>
-                <div>
+                <div class="paragraph-one">
                     <p>This website has some subtext that goes here under the main title. It`s a smaller font and the color is lower contrast</p>
                 </div>
                 <div>
                     <button class="sign-up">Sign Up</button>
                 </div>
             </div>
-            <div class="header-container">
+            <div class="header-container-photo">
                 <img src="/home/brandonzs/repos/landing-page/images/katie-bernotsky-zV3eqGQYVpc-unsplash.jpg" alt="">
             </div>
         </div>
