--- a/index.html
+++ b/index.html
@@ -35,15 +35,24 @@
     </div>
     <div class="info images">
         <div><h3>Some random information</h3></div>
-        <div>
-            <img src="/home/brandonzs/repos/landing-page/images/luc-huyghebaert-ceGfN7p2mNU-unsplash.jpg" alt="">
-            <p>This is some subtext under an illustration or image</p>
-            <img src="/home/brandonzs/repos/landing-page/images/kojirou-sasaki-DLdDrb2d4F4-unsplash.jpg" alt="">image1
-            <p>This is some subtext under an illustration or image</p>
-            <img src="images/khalid-elkady-VA1JRsFJd70-unsplash.jpg" alt="">image1
-            <p>This is some subtext under an illustration or image</p>
-            <img src="images/james-watson-2joVhR1OWSc-unsplash.jpg" alt="">image1
-            <p>This is some subtext under an illustration or image</p>
+        <div class=" card">
+            <div>
+                <img src="/home/brandonzs/repos/landing-page/images/luc-huyghebaert-ceGfN7p2mNU-unsplash.jpg" alt="">
+                <p>This is some subtext under an illustration or image</p>
+            </div>
+            <div>
+                <img src="/home/brandonzs/repos/landing-page/images/kojirou-sasaki-DLdDrb2d4F4-unsplash.jpg" alt="">
+                <p>This is some subtext under an illustration or image</p>
+            </div>
+            <div>
+                <img src="images/khalid-elkady-VA1JRsFJd70-unsplash.jpg" alt="">
+                <p>This is some subtext under an illustration or image</p>
+            </div>
+            <div>
+                <img src="images/james-watson-2joVhR1OWSc-unsplash.jpg" alt="">
+                <p>This is some subtext under an illustration or image</p>
+            </div>
+            
         </div>
     </div>
     <div class="info quote">
