--- a/index.html
+++ b/index.html
@@ -56,10 +56,11 @@
         </div>
     </div>
     <div class="info quote">
-        <div>
+        <div class="info quote text">
             <p>This is an inspiring quote, or a testimonial from a customer. Maybe it`s just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice</p>
+            <div><h4>-Thor, god of Thunder</h4></div>
         </div>
-        <div><p>-Thor, god of Thunder</p></div>
+        
 
     </div>
     <div class="info reclut">
