--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
     <div class="info quote">
         <div class="info quote text">
             <p>This is an inspiring quote, or a testimonial from a customer. Maybe it`s just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice</p>
-            <div><h4>-Thor, god of Thunder</h4></div>
+            <h4>-Thor, god of Thunder</h4>
         </div>
         
 
     </div>
     <div class="info reclut">
-        <div>
+        <div class="info reclut container">
             <div>
                 <h4>Call of action! It`s time!</h4>
                 <p>Sign up for our product by clicking that button right over there!</p>
