--- a/index.html
+++ b/index.html
@@ -10,13 +10,6 @@
     <div class="header">
         <div class="headertop">
             <img id="logo" src="/home/brandonzs/repos/landing-page/images/ohmybonnie.jpg" alt="oh my bonnie logo">
-            <ul>
-                <li><a href="">header link one</a></li>
-                <li><a href="">header link two</a></li>
-                <li><a href="">header link three</a></li>
-            </ul>
-        </div>
-        <div class="container">
             <div class="header-container">
                 <div>
                     <h2>This website is awesome</h2>
@@ -28,6 +21,18 @@
                     <button class="sign-up">Sign Up</button>
                 </div>
             </div>
+            
+        </div>
+        <div class="container">
+            <ul>
+                <li><a href="">header link one</a></li>
+                <li><a href="">header link two</a></li>
+                <li><a href="">header link three</a></li>
+            </ul>
+
+
+
+            
             <div class="header-container-photo">
                 <img src="/home/brandonzs/repos/landing-page/images/katie-bernotsky-zV3eqGQYVpc-unsplash.jpg" alt="">
             </div>
@@ -64,12 +69,12 @@
 
     </div>
     <div class="info reclut">
-        <div class="info reclut container">
-            <div>
+        <div class="info reclut box">
+            <div id="info-text">
                 <h4>Call of action! It`s time!</h4>
                 <p>Sign up for our product by clicking that button right over there!</p>
             </div>
-            <div>
+            <div id="info-button">
                 <button class="sign-up">Sign up</button>
             </div>
         </div>
